--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start":"node src/index.js",
-    "dev":"node src/index.js",
+    "start": "npm run  && node /index.js",
+    "dev": "node src/index.js",
     "test": "jest"
   },
   "repository": {
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/hisusqristos/yanimate#readme",
   "dependencies": {
     "jest": "^29.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.5"
   }
 }
