--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "npm run  && node /index.js",
-    "dev": "node src/index.js",
+    "start": "npm run  && node dest/index.js",
+    "dev": "node dest/index.js",
     "test": "jest"
   },
   "repository": {
